--- a/chrome/package.json
+++ b/chrome/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "qrcode.react": "^3.1.0",
+    "qrcodejs": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup-plugin-copy": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
